parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@string.py-4.snap
---
source: parser/src/lexer/lexer.rs
description: "raw_err = r'ss\n"
input_file: parser/test_data/inputs/one_liners/string.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "raw_err",
        ),
        start: 0,
        end: 7,
    },
    Token {
        kind: Assign,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Error,
        value: Str(
            "String not terminated",
        ),
        start: 10,
        end: 15,
    },
]
