parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@string.py-5.snap
---
source: parser/src/lexer/lexer.rs
description: ""
input_file: parser/test_data/inputs/one_liners/string.py
---
[]
